--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/GastosCasa?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3307/GastosCasa?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.datasource.username=root
 spring.datasource.password=1234
+
+server.port=8181
 
 
 spring.jpa.show-sql=true
